# comp0197_groupcoursework_transformer

./: .gitignore  CHANGELOG.md  README.md  README.zh.md  pyproject.toml  results_analysis.md
.claude/: settings.local.json
code/: instruction.md  test.py  train.py  uk-electricity-transformer.ipynb
code/checkpoints/: cnn_best_20260406_201251.pt  lstm_best_20260406_200948.pt  lstm_mse_best_20260406_203336.pt  lstm_no_fe_best_20260406_203440.pt  mamba_best.pt  mamba_best_20260318_152719.pt  sarima_best.pkl  transformer_best_20260406_200509.pt  transformer_mse_best_20260406_213208.pt  transformer_no_fe_best_20260406_213458.pt
code/configs/: cnn.yaml  default.yaml  lstm.yaml  lstm_mse.yaml  lstm_no_fe.yaml  mamba.yaml  sarima.yaml  transformer.yaml  transformer_mse.yaml  transformer_no_fe.yaml
code/logs/run_20260318_152719/: result.json
code/logs/run_20260406_200509/: result.json
code/logs/run_20260406_200948/: result.json
code/logs/run_20260406_201251/: result.json
code/logs/run_20260406_203336/: result.json
code/logs/run_20260406_203440/: result.json
code/logs/run_20260406_213208/: result.json
code/logs/run_20260406_213458/: result.json
code/results/: summary.csv
code/results/cnn/: metrics.json
code/results/lstm/: metrics.json
code/results/lstm_mse/: metrics.json
code/results/lstm_no_fe/: metrics.json
code/src/data/: dataset.py  feature.py  loader.py
elec_transformer/: README.md  predict.py  train.py  uk-electricity-transformer-no-fe.ipynb  uk-electricity-transformer.ipynb
elec_transformer/configs/: default.yaml  no_fe.yaml  sarima.yaml
(+24 files in other folders)
